<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="loading">Your widget is loading&#8230;</string>
    <string name="app_name">Binary Clock</string>
    <string name="app_config_title">Binary Clock Widget</string>

    <string name="premium_title">Unlock all options</string>
    <string name="premium_summary">Get premium to use all the goodies</string>

    <string name="background_title">Background</string>
    <string name="background_white">White</string>
    <string name="background_black">Black</string>
    <string name="background_nobkg">No Background</string>
    <string name="background_none">None (default)</string>

    <string name="dots_title">Dots color</string>
    <string name="color_picker_title">Choose dots color</string>

    <string name="seconds_title">Seconds</string>
    <string name="seconds_summary_on">Show always when enough space</string>
    <string name="seconds_summary_off">Hours and minutes only</string>

    <string name="ampm_title">Use AM/PM format</string>
    <string name="ampm_summary_on">1:00 PM</string>
    <string name="ampm_summary_off">13:00</string>
    <string name="ampm_hint">Top left dot indicates AM/PM. If on it\'s PM.</string>

    <string name="compact_title">Pure binary notation</string>
    <string name="compact_summary_on">Each number is a column</string>
    <string name="compact_summary_off">Each digit is a column</string>

    <string name="menu_done">Done</string>



</resources>