<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="premium"
        android:title="@string/premium_title"
        android:summary="@string/premium_summary"
        android:icon="@drawable/ic_shop_white_36dp" />

    <ListPreference
        android:key="background"
        android:title="@string/background_title"
        android:summary="@string/background_nobkg"
        android:entries="@array/background_list"
        android:entryValues="@array/values_three"
        android:defaultValue="0" />

    <com.flask.colorpicker.ColorPickerPreference
        android:key="dotColor"
        android:title="@string/dots_title"
        android:enabled="false"

        app:pickerTitle="@string/color_picker_title"
        app:density="8"
        app:lightnessSlider="true"
        app:initialColor="0xffffffff" />

    <CheckBoxPreference
        android:key="seconds"
        android:title="@string/seconds_title"
        android:summaryOn="@string/seconds_summary_on"
        android:summaryOff="@string/seconds_summary_off"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="AM_PM"
        android:title="@string/ampm_title"
        android:summaryOn="@string/ampm_summary_on"
        android:summaryOff="@string/ampm_summary_off"
        android:defaultValue="false"
        android:enabled="false" />

    <CheckBoxPreference
        android:key="compact"
        android:title="@string/compact_title"
        android:summaryOn="@string/compact_summary_on"
        android:summaryOff="@string/compact_summary_off"
        android:defaultValue="false"
        android:enabled="false" />

</PreferenceScreen>